objects/Population_Data__c.object
<CustomObject>
    <fields>
        <fullName>PPC_Eligibility__c</fullName>
        <label>PPC Eligibility</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>This object is used to denote what zip codes are eligible for Upsell campaigns.</description>
    <label>Population Data</label>
    <nameField>
        <displayFormat>PD-{0}</displayFormat>
        <label>Population Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Population Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>